# small-malloc

./: .gitignore  CMakeLists.txt  MallocMetaData.h  README.md  malloc_1.cpp  malloc_2.cpp  malloc_2.h  malloc_3.cpp  malloc_3.h  malloc_4.cpp  malloc_4.h
Final/: malloc_1.cpp  malloc_2.cpp  malloc_4.cpp  submitters.txt
tests/: mainTest2.cpp  mainTest3.cpp  mainTest4.cpp
